# nonebot-bridge

./: .gitignore  Dockerfile  README.md  bot.py  env.example  pyproject.toml  requirements.txt
nonebot_bridge/plugins/: bridge.py
