[project]
name = "nonebot-bridge"
version = "0.1.0"
description = "nonebot-bridge"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "飞书", module_name = "nonebot.adapters.feishu" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "QQ", module_name = "nonebot.adapters.qq" },
]
plugins = []
plugin_dirs = []
builtin_plugins = ["echo"]
